--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Mini ERP (Vue2 + Vuex)</title>
+  <title>Mini ERP</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="bg-light">
@@ -23,15 +23,21 @@
     </div>
 
     <div class="card p-3 mb-3">
-      <h5>Детали (склад)</h5>
+      <h5>Детали</h5>
       <div class="row g-2 mb-2">
-        <div class="col"><input v-model="partName" class="form-control" placeholder="Наименование"></div>
-        <div class="col"><input v-model.number="partQty" type="number" class="form-control" placeholder="Кол-во"></div>
-        <div class="col"><button class="btn btn-success w-100" @click="addPart">Добавить</button></div>
+        <div class="col">
+          <input v-model="partName" class="form-control" placeholder="Название">
+        </div>
+        <div class="col">
+          <input v-model.number="partQty" type="number" class="form-control" placeholder="Количество">
+        </div>
+        <div class="col">
+          <button class="btn btn-success w-100" @click="addPart">Добавить</button>
+        </div>
       </div>
 
       <table class="table table-sm">
-        <tr><th>Название</th><th>Количество</th></tr>
+        <tr><th>Название</th><th>Кол-во</th></tr>
         <tr v-for="p in parts" :key="p.id">
           <td>{{ p.name }}</td>
           <td>{{ p.qty }}</td>
