--- a/index.html
+++ b/index.html
@@ -1,60 +1,22 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <title>Mini ERP</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Mini ERP</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+	<link href="assets/app.css" rel="stylesheet">
 </head>
 <body class="bg-light">
-
-<div id="app" class="container py-4">
-  <h3 class="mb-3">Mini ERP</h3>
-
-  <div v-if="!isAuth" class="card p-3">
-    <input v-model="login" class="form-control mb-2" placeholder="login">
-    <input v-model="password" type="password" class="form-control mb-2" placeholder="password">
-    <button class="btn btn-primary" @click="doLogin">Login</button>
-  </div>
-
-  <div v-else>
-    <div class="mb-3">
-      <b>Пользователь:</b> {{ user.login }} ({{ user.role }})
-      <button class="btn btn-sm btn-outline-danger ms-2" @click="logout">Logout</button>
-    </div>
-
-    <div class="card p-3 mb-3">
-      <h5>Детали</h5>
-      <div class="row g-2 mb-2">
-        <div class="col">
-          <input v-model="partName" class="form-control" placeholder="Название">
-        </div>
-        <div class="col">
-          <input v-model.number="partQty" type="number" class="form-control" placeholder="Количество">
-        </div>
-        <div class="col">
-          <button class="btn btn-success w-100" @click="addPart">Добавить</button>
-        </div>
-      </div>
-
-      <table class="table table-sm">
-        <tr><th>Название</th><th>Кол-во</th></tr>
-        <tr v-for="p in parts" :key="p.id">
-          <td>{{ p.name }}</td>
-          <td>{{ p.qty }}</td>
-        </tr>
-      </table>
-    </div>
-
-    <div class="card p-3">
-      <button class="btn btn-outline-secondary me-2" @click="exportDB">Экспорт базы</button>
-      <input type="file" @change="importDB">
-    </div>
-  </div>
-</div>
+<div id="app" class="container py-4"></div>
 
 <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/vuex@3.6.2/dist/vuex.js"></script>
-<script src="store.js"></script>
-<script src="app.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+<script src="js/utils.js"></script>
+<script src="js/store.js"></script>
+<script src="js/components.js"></script>
+<script src="js/app.js"></script>
 </body>
 </html>
