--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
 </head>
 <body class="bg-light">
 <div id="app" class="container py-4"></div>
+
 <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/vuex@3.6.2/dist/vuex.js"></script>
+
+<script src="js/cookies.js"></script>
 <script src="js/store.js"></script>
 <script src="js/components.js"></script>
 <script src="js/app.js"></script>
