--- a/index.html
+++ b/index.html
@@ -5,16 +5,23 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Mini ERP</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+	<link href="assets/app.css" rel="stylesheet">
 </head>
 <body class="bg-light">
-<div id="app" class="container py-4"></div>
+<div id="app" class="container-fluid py-3"></div>
 
 <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/vuex@3.6.2/dist/vuex.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
 <script src="js/cookies.js"></script>
+<script src="js/utils.js"></script>
 <script src="js/store.js"></script>
-<script src="js/components.js"></script>
+<script src="js/components/common.js"></script>
+<script src="js/components/parts.js"></script>
+<script src="js/components/components.js"></script>
+<script src="js/components/devices.js"></script>
+<script src="js/components/backup.js"></script>
 <script src="js/app.js"></script>
 </body>
 </html>
